docker updated, security added and some fixing